force-app/main/default/objects/GTM_Migration_Pair__mdt/GTM_Migration_Pair__mdt.object-meta.xml
<CustomObject>
    <label>GTM Migration Pair</label>
    <pluralLabel>GTM Migration Pairs</pluralLabel>
</CustomObject>