force-app/main/default/objects/GTM_Migration_Pair__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive rows are skipped by the resolver, which then treats the pair as unlisted.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>