force-app/main/default/objects/GTM_Migration_Pair__mdt/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <label>Source Key</label>
    <description>Platform_Key__c of the source (extract-from) side.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>