force-app/main/default/objects/GTM_Migration_Pair__mdt/fields/Supported__c.field-meta.xml
<CustomField>
    <fullName>Supported__c</fullName>
    <label>Supported</label>
    <description>Whether the accelerator can actually process this pair end to end. Unticking is how a pair is taken off the menu without deleting the record -- and an explicitly unsupported pair carries better wording than an absent one, because Unsupported_Reason__c can say why.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>