force-app/main/default/objects/GTM_Migration_Pair__mdt/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <label>Target Key</label>
    <description>Platform_Key__c of the target (write-to) side.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>