force-app/main/default/objects/GTM_Migration_Pair__mdt/fields/Unsupported_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsupported_Reason__c</fullName>
    <label>Unsupported Reason</label>
    <description>One line a rep can read, and the text that lands in Advisory_Reason__c when this pair is selected. Ignored when Supported__c is ticked.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>